# core

./: .gitignore  CMakeLists.txt  makefile
cbuild/: CMakeCache.txt  Makefile  cmake_install.cmake
cbuild/core/: .gitignore  makefile
cbuild/core/src/: bash_color.hpp  config.hpp  core.cpp  core.hpp  main.cpp
src/: auto_ptr_utest.cpp  auto_ptr_utest.hpp  bash_color.hpp  config.hpp  core.cpp  core.hpp  core_test.cpp  core_test.hpp  int128.cpp  int256.cpp  int256.hpp  main.cpp  unit_test.hpp
unit/: CMakeLists.txt
unit/src/: Calculator.cpp
unit/tests/: CMakeLists.txt  TestCalculator.cpp  TestCalculator.h  main.cpp
